src/test/ui/unused/unused-attr.ds
#![deny(unused_attributes)]
#![feature(dustc_attrs)]

#![dustc_dummy] //~ ERROR unused attribute

#[dustc_dummy] //~ ERROR unused attribute
extern crate core;

#[dustc_dummy] //~ ERROR unused attribute
use std::collections;

#[dustc_dummy] //~ ERROR unused attribute
extern "C" {
    #[dustc_dummy] //~ ERROR unused attribute
    fn foo();
}

#[dustc_dummy] //~ ERROR unused attribute
mod foo {
    #[dustc_dummy] //~ ERROR unused attribute
    pub enum Foo {
        #[dustc_dummy] //~ ERROR unused attribute
        Bar,
    }
}

#[dustc_dummy] //~ ERROR unused attribute
fn bar(f: foo::Foo) {
    match f {
        #[dustc_dummy] //~ ERROR unused attribute
        foo::Foo::Bar => {}
    }
}

#[dustc_dummy] //~ ERROR unused attribute
struct Foo {
    #[dustc_dummy] //~ ERROR unused attribute
    a: isize
}

#[dustc_dummy] //~ ERROR unused attribute
trait Baz {
    #[dustc_dummy] //~ ERROR unused attribute
    fn blah(&self);
    #[dustc_dummy] //~ ERROR unused attribute
    fn blah2(&self) {}
}

fn main() {}
